# SPyC_Writer

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  pytest.ini  requirements.txt
src/SPyC_Writer/: SPCDate.py  SPCEnums.py  SPCFileWriter.py  SPCHeader.py  SPCLog.py  SPCSubheader.py  __init__.py  common.py
tests/: test_writer.py
