[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "SPyC_Writer"
authors = [{name = "Wasatch Photonics", email = "sw-support@wasatchphotonics.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/WasatchPhotonics/SPyC_Writer"
